# pekko-reference

./: .env.datafusion.example  ACADEMIC_RESEARCH_GUIDE.md  ARROW_VERSION_ISSUE.md  DATAFUSION_INTEGRATION_PROGRESS.md  DATAFUSION_INTEGRATION_SUMMARY.md  DATAFUSION_QUICKSTART.md  INTEGRATION_TESTS_README.md  INTEGRATION_TEST_STATUS.md  README.md  RUN_INTEGRATION_TESTS.md  THEORY_DEEP_DIVE.md  build.sbt  docker-compose-datafusion.yml  quick-test.sh  run-integration-tests.sh  run-tests-jdk11.sh  test-datafusion-integration.sh  test-integration-simple.scala  test_http_endpoints.sh
datafusion-service/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  config-dev.toml  config-prod.toml  config-test.toml  config.toml  test_service.sh  verify.sh
datafusion-service/src/: config.rs  executor.rs  flight_server.rs  main.rs
docs/: CONFIGURATION.md  DEPLOYMENT.md  EVENT_SOURCING_GUIDE.md  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  RELEASE_NOTES_v0.5.md
docs/blog/: 01_architecture_diagrams.md  02_actor_patterns.md  (+8 more)
examples/: datafusion-workflow-example.json
k8s/: README.md  datafusion-configmap.yaml  datafusion-service-deployment.yaml  ingress.yaml  pekko-server-deployment.yaml
monitoring/: prometheus.yml
plan/: API_USAGE.md  DAY1_CLUSTER_ARCHITECTURE_PLAN.md  DAY1_TECHNICAL_SUMMARY.md  DAY2_TASK_SCHEDULING_PLAN.md  DEVELOPMENT.md  FRONTEND_GUIDE.md  QUICKSTART.md
project/: plugins.sbt
scripts/: verify-datafusion-config.sh  verify-implementation.sh
xxt-ui/: GETTING_STARTED.md  README.md  index.html  package.json  vite.config.ts
(+199 files in other folders)
